Reset and figured out thespacing issue for the header and quote box

--- a/style.css
+++ b/style.css
@@ -1,162 +1,201 @@
 * {
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
+   }
+
+body {
+    font-family: Arial, sans-serif;
 }
 
-
-.navbar,.container,.container-2 {
-    color: #ffffff;
+.header {
+    min-height: 75px;
     background-color: #1f2937;
-    height: 200px;
-    padding-left: 50px;
-}
-
-.hero {
+    color: white;
     display: flex;
-}
-
-.hero-image {
-    display: flex;
-    width: 600px;
-    height: 100px;
-    flex-direction: row;
-}
-
-.container {
-    display: flex;
-    justify-content: center;
     align-items: center;
-    padding-left: 0px;
-}
-.navbar {
-    padding-top: 0px;
-    margin-top: 0px;
+    font-weight: bold;
+    padding-left: 12%;
+    padding-right: 12%;
 }
 
 ul {
     list-style: none;
-    padding-right: 300px;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    margin-left: auto;
+    gap: 40px;
+    font-size: 18px;
 }
 
-.logo {
+.header p {
     font-size: 24px;
+}
+
+.hero {
+    width: auto;
+    height: auto;
+    display: flex;
+    align-items: flex-start;
+    padding-left: 12%;
+    padding-right: 12%;
+    padding-top: 7%;
+    padding-bottom: 7%;
+    background-color: #1f2937;
+    color: white;
+    gap: 20px;
+    }
+
+.hero-text {
+    display: flex;
+    flex: 1;
+    min-height: 100%;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 15px;
+       }
+
+.hero h1 {
+    font-size: 48px;
+}
+
+.hero p {
+    font-size: 20px;
+}
+
+.image-container {
+    flex: 1;
+    width: auto;
+    height: auto;
+}
+
+.image-container img {
+    height: 100%;
+    width: 100%;
+}
+
+@media screen and (max-width: 1500px) {
+    .image-container img {display: none;}
+ 
+}
+
+.hero button {
+    padding:7px 14px;
+    background-color: #3882F6;
+    color: white;
     font-weight: bold;
+    border-radius: 4px;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.information {
+    height: auto;
+    padding-left: 12%;
+    padding-right: 12%;
+    padding-top: 4%;
+    }
+
+.info-title {
+    font-size: 36px;
+    font-weight: bolder;
+    padding-bottom: 4%;
+    text-align: center;
+}
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding-bottom: 6%;
 }
 
 .text {
-    font-size: 18px;
-    padding: 20px;
-}
-
-.navbar a {
-    text-decoration: none;
-    list-style: none;
-    color: #ffffff;
-    font-size: 18px;
-    font-weight: bold;
-}
-
-.navbar a:hover {
-    color: lightblue;
-}
-
-.navbar ul {
-    display: flex;
-    gap: 10px;
-}
-
-.navbar .container {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 25px;
-}
-
-button {
-    background-color: #3882f6;
-    color: white;
-    width: 100px;
-    height: 35px;
-    border: none;
-    border-radius: 15px;
-    margin: 10px;
-}
-
-.container-2 {
-    display: flex;
-}
-
-h2 {
+    max-width: 200px;
     text-align: center;
-    font-weight: 800;
-    font-size: 36px;
-    margin: 25px;
+    padding-top: 10px;
 }
 
-.description {
-    text-align: center;
-}
-
-.photos {
-    font-size: 36px;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: center;
-    margin: 40px;
-}
-
-.photos img {
+.group img {
+    border-radius: 10%;
     width: 200px;
-    border: 5px solid #3882f6;
-    border-radius: 10px;
-    margin: 5px 10px;
+    height: 200px;
 }
 
-.description {
-    font-size: 24px;
-}
-
-.quote,.credit{
+.quote-panel {
+    height: auto;
+    padding-left: 16%;
+    padding-right: 16%;
+    padding-top: 6%;
+    padding-bottom: 5%;
     background-color: #e5e7eb;
-    font-size: 36px;
-    font-style: italic;
-    height: 300px;
-    padding: 50px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    gap: 20px;
 }
 
-.action {
+.quote {
+    font-size: 30px;
+    font-style: italic;
+}
+
+.attribute {
+    margin-left: auto;
+    font-weight: bold;
+    margin-right: 15px;
+    font-size: 22px;
+}
+
+.call-to-action {
+    height: auto;
+    padding-left: 25%;
+    padding-right: 25%;
+    padding-top: 6%;
+    padding-bottom: 7%;
+}
+
+.cta-box {
     background-color: #3882f6;
-    font-size: 24px;
-    height: 200px;
-    margin: 100px 100px;
-    padding: 20px 100px;
-    display: flex;
-    align-items: center;
-    border-radius: 5px;
-}
-
-.but2 {
-    background-color: #ffffff;
-    color:#3882f6;
-    border: solid 4px #ffffff;
     border-radius: 15px;
-    width: 100px;
-    height: 35px;
-    margin: 10px;
-}
-
-footer {
+    border:2px solid rgb(74, 51, 204);
+    height: auto;
     display: flex;
     justify-content: center;
-    align-items: center;
-    background-color: #1f2937;
-    color: #ffffff;
-    text-align: center;
-    height: 100px;
+    align-items: flex-end;
+    gap: 30px;
+    color: white;
+    padding: 40px;
+}
 
+.sign-up {
+    font-size: 36px;
+    font-weight: bold;
+    padding-bottom: 3px;
+}
+
+.hard-enough {
+    font-size: 24px;
+}
+
+.sign-up-button {
+    padding:7px 14px;
+    background-color: #3882F6;
+    color: white;
+    font-weight: bold;
+    border-radius: 8px;
+    outline-color: white;
+    font-size: 18px;
+}
+
+.footer{
+    min-height: 75px;
+    background-color: #1f2937;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
 }
